--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,8 @@ before_install:
 - export PATH="${RACKET_DIR}/bin:${PATH}" #install-racket.sh can't set for us
 
 install:
-- cd .. && raco pkg install --auto pokemon-sprites/
+- cd .. && raco pkg install --auto https://github.com/thoughtstem/pokemon-assets.git
+- raco pkg install pokemon-sprites/
  
 before_script:
 
